--- a/src/templates/pages/index.html
+++ b/src/templates/pages/index.html
@@ -9,8 +9,7 @@
                     <div class="swiper-slide">
                         <a href="/" class="card card--image">
                             <picture class="card-img">
-                                <!--[if IE 9]>
-                                <video style="display: none;"><![endif]-->
+                                <!--[if IE 9]><video style="display: none;"><![endif]-->
                                 <source srcset="img/AA5J7280.webp" type="image/webp">
                                 <!--[if IE 9]></video><![endif]-->
                                 <img src="img/AA5J7280.jpg" type="image/jpg" title="Новые технологии на ВМЗ в 2019"
@@ -152,6 +151,69 @@
             </span>
                     <span class="main-page__link-text">Поддержка</span>
                 </a>
+            </div>
+        </div>
+    </div>
+
+    <div class="row news__row">
+        <div class="col-12">
+            <div class="main-page__slider js-main-page__slider">
+                <div class="swiper-container ">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <a href="#" class="main-page__slider-item">
+                                <picture class="main-page__slider-img">
+                                    <!--[if IE 9]><video style="display: none;"><![endif]-->
+                                    <source srcset="img/main_page_img_1.webp" type="image/webp">
+                                    <!--[if IE 9]></video><![endif]-->
+                                    <img src="img/main_page_img_1.png" title="Конкурс работников производства ВМЗ" alt="Конкурс работников производства ВМЗ">
+                                </picture>
+                            </a>
+                        </div>
+                        <div class="swiper-slide">
+                            <a href="#" class="main-page__slider-item">
+                                <picture class="main-page__slider-img">
+                                    <!--[if IE 9]><video style="display: none;"><![endif]-->
+                                    <source srcset="img/main_page_img_2.webp" type="image/webp">
+                                    <!--[if IE 9]></video><![endif]-->
+                                    <img src="img/main_page_img_2.png" title="Инструкция по профилактике короновируса на производстве" alt="Инструкция по профилактике короновируса на производстве">
+                                </picture>
+                            </a>
+                        </div>
+                        <div class="swiper-slide">
+                            <a href="#" class="main-page__slider-item">
+                                <picture class="main-page__slider-img">
+                                    <!--[if IE 9]><video style="display: none;"><![endif]-->
+                                    <source srcset="img/main_page_img_3.webp" type="image/webp">
+                                    <!--[if IE 9]></video><![endif]-->
+                                    <img src="img/main_page_img_3.png" title="Фестиваль «ОМК — детям»" alt="Фестиваль «ОМК — детям»">
+                                </picture>
+                            </a>
+                        </div>
+                        <div class="swiper-slide">
+                            <a href="#" class="main-page__slider-item">
+                                <picture class="main-page__slider-img">
+                                    <!--[if IE 9]><video style="display: none;"><![endif]-->
+                                    <source srcset="img/main_page_img_4.webp" type="image/webp">
+                                    <!--[if IE 9]></video><![endif]-->
+                                    <img src="img/main_page_img_4.png" title="Дни рождения сотрудников ВМЗ в апреле" alt="Дни рождения сотрудников ВМЗ в апреле">
+                                </picture>
+                            </a>
+                        </div>
+                        <div class="swiper-slide">
+                            <a href="#" class="main-page__slider-item">
+                                <picture class="main-page__slider-img">
+                                    <!--[if IE 9]><video style="display: none;"><![endif]-->
+                                    <source srcset="img/main_page_img_1.webp" type="image/webp">
+                                    <!--[if IE 9]></video><![endif]-->
+                                    <img src="img/main_page_img_1.png" title="Конкурс работников производства ВМЗ" alt="Конкурс работников производства ВМЗ">
+                                </picture>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-button swiper-button-prev"></div>
+                <div class="swiper-button swiper-button-next"></div>
             </div>
         </div>
     </div>
