--- a/src/blocks/_modules.scss
+++ b/src/blocks/_modules.scss
@@ -10,3 +10,4 @@
 @import 'modules/likeItem/likeItem';
 @import 'modules/practices/practices__widget';
 @import 'modules/pagination/pagination';
+@import 'modules/information-systems-search/information-systems-search';
